build/make.log
Scanning dependencies of target ATOSVisitorTester
[ 50%] Building CXX object tests/CMakeFiles/ATOSVisitorTester.dir/ATOSVisitorTester.cpp.o
In file included from /home/r09/xacc-atos/tests/ATOSVisitorTester.cpp:32:0:
/home/r09/xacc-atos/utils/ATOSVisitor.hpp: In member function ‘virtual void xacc::quantum::ATOSVisitor::visit(xacc::quantum::Rz&)’:
/home/r09/xacc-atos/utils/ATOSVisitor.hpp:342:42: error: no matching function for call to ‘std::vector<qat::comm::datamodel::ComplexNumber>::push_back(double)’
           Roz.data.push_back(exp(iOne.im));
                                          ^
/home/r09/xacc-atos/utils/ATOSVisitor.hpp:342:42: note: candidates are:
In file included from /usr/include/c++/4.8.2/vector:64:0,
                 from /home/r09/.xacc/include/gtest/gtest/gtest.h:56,
                 from /home/r09/xacc-atos/tests/ATOSVisitorTester.cpp:31:
/usr/include/c++/4.8.2/bits/stl_vector.h:901:7: note: void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = qat::comm::datamodel::ComplexNumber; _Alloc = std::allocator<qat::comm::datamodel::ComplexNumber>; std::vector<_Tp, _Alloc>::value_type = qat::comm::datamodel::ComplexNumber]
       push_back(const value_type& __x)
       ^
/usr/include/c++/4.8.2/bits/stl_vector.h:901:7: note:   no known conversion for argument 1 from ‘double’ to ‘const value_type& {aka const qat::comm::datamodel::ComplexNumber&}’
/usr/include/c++/4.8.2/bits/stl_vector.h:919:7: note: void std::vector<_Tp, _Alloc>::push_back(std::vector<_Tp, _Alloc>::value_type&&) [with _Tp = qat::comm::datamodel::ComplexNumber; _Alloc = std::allocator<qat::comm::datamodel::ComplexNumber>; std::vector<_Tp, _Alloc>::value_type = qat::comm::datamodel::ComplexNumber]
       push_back(value_type&& __x)
       ^
/usr/include/c++/4.8.2/bits/stl_vector.h:919:7: note:   no known conversion for argument 1 from ‘double’ to ‘std::vector<qat::comm::datamodel::ComplexNumber>::value_type&& {aka qat::comm::datamodel::ComplexNumber&&}’
In file included from /home/r09/xacc-atos/tests/ATOSVisitorTester.cpp:32:0:
/home/r09/xacc-atos/utils/ATOSVisitor.hpp:346:42: error: no matching function for call to ‘std::vector<qat::comm::datamodel::ComplexNumber>::push_back(double)’
           Roz.data.push_back(exp(iOne.im));
                                          ^
/home/r09/xacc-atos/utils/ATOSVisitor.hpp:346:42: note: candidates are:
In file included from /usr/include/c++/4.8.2/vector:64:0,
                 from /home/r09/.xacc/include/gtest/gtest/gtest.h:56,
                 from /home/r09/xacc-atos/tests/ATOSVisitorTester.cpp:31:
/usr/include/c++/4.8.2/bits/stl_vector.h:901:7: note: void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = qat::comm::datamodel::ComplexNumber; _Alloc = std::allocator<qat::comm::datamodel::ComplexNumber>; std::vector<_Tp, _Alloc>::value_type = qat::comm::datamodel::ComplexNumber]
       push_back(const value_type& __x)
       ^
/usr/include/c++/4.8.2/bits/stl_vector.h:901:7: note:   no known conversion for argument 1 from ‘double’ to ‘const value_type& {aka const qat::comm::datamodel::ComplexNumber&}’
/usr/include/c++/4.8.2/bits/stl_vector.h:919:7: note: void std::vector<_Tp, _Alloc>::push_back(std::vector<_Tp, _Alloc>::value_type&&) [with _Tp = qat::comm::datamodel::ComplexNumber; _Alloc = std::allocator<qat::comm::datamodel::ComplexNumber>; std::vector<_Tp, _Alloc>::value_type = qat::comm::datamodel::ComplexNumber]
       push_back(value_type&& __x)
       ^
/usr/include/c++/4.8.2/bits/stl_vector.h:919:7: note:   no known conversion for argument 1 from ‘double’ to ‘std::vector<qat::comm::datamodel::ComplexNumber>::value_type&& {aka qat::comm::datamodel::ComplexNumber&&}’
/home/r09/xacc-atos/tests/ATOSVisitorTester.cpp: In member function ‘virtual void ATOSVisitorTester_checkIRToATOS_Test::TestBody()’:
/home/r09/xacc-atos/tests/ATOSVisitorTester.cpp:87:41: error: ‘class xacc::quantum::ATOSVisitor’ has no member named ‘getCiircuit’
  std::cout << "\nACTUAL:\n" << visitor->getCiircuit() << std::endl;
                                         ^
In file included from /home/r09/.xacc/include/gtest/gtest/gtest.h:58:0,
                 from /home/r09/xacc-atos/tests/ATOSVisitorTester.cpp:31:
/home/r09/xacc-atos/tests/ATOSVisitorTester.cpp:92:35: error: ‘class xacc::quantum::ATOSVisitor’ has no member named ‘getCiircuit’
  EXPECT_TRUE(expected == visitor->getCiircuit());
                                   ^
/home/r09/.xacc/include/gtest/gtest/internal/gtest-internal.h:1145:34: note: in definition of macro ‘GTEST_TEST_BOOLEAN_’
       ::testing::AssertionResult(expression)) \
                                  ^
/home/r09/xacc-atos/tests/ATOSVisitorTester.cpp:92:2: note: in expansion of macro ‘EXPECT_TRUE’
  EXPECT_TRUE(expected == visitor->getCiircuit());
  ^
In file included from /usr/include/c++/4.8.2/x86_64-redhat-linux/bits/c++allocator.h:33:0,
                 from /usr/include/c++/4.8.2/bits/allocator.h:46,
                 from /usr/include/c++/4.8.2/memory:63,
                 from /home/r09/xacc-atos/tests/ATOSVisitorTester.cpp:30:
/usr/include/c++/4.8.2/ext/new_allocator.h: In instantiation of ‘void __gnu_cxx::new_allocator<_Tp>::construct(_Up*, _Args&& ...) [with _Up = xacc::quantum::ATOSVisitor; _Args = {int}; _Tp = xacc::quantum::ATOSVisitor]’:
/usr/include/c++/4.8.2/bits/alloc_traits.h:254:4:   required from ‘static typename std::enable_if<std::allocator_traits<_Alloc>::__construct_helper<_Tp, _Args>::value, void>::type std::allocator_traits<_Alloc>::_S_construct(_Alloc&, _Tp*, _Args&& ...) [with _Tp = xacc::quantum::ATOSVisitor; _Args = {int}; _Alloc = std::allocator<xacc::quantum::ATOSVisitor>; typename std::enable_if<std::allocator_traits<_Alloc>::__construct_helper<_Tp, _Args>::value, void>::type = void]’
/usr/include/c++/4.8.2/bits/alloc_traits.h:393:57:   required from ‘static decltype (_S_construct(__a, __p, (forward<_Args>)(std::allocator_traits::construct::__args)...)) std::allocator_traits<_Alloc>::construct(_Alloc&, _Tp*, _Args&& ...) [with _Tp = xacc::quantum::ATOSVisitor; _Args = {int}; _Alloc = std::allocator<xacc::quantum::ATOSVisitor>; decltype (_S_construct(__a, __p, (forward<_Args>)(std::allocator_traits::construct::__args)...)) = <type error>]’
/usr/include/c++/4.8.2/bits/shared_ptr_base.h:400:38:   required from ‘std::_Sp_counted_ptr_inplace<_Tp, _Alloc, _Lp>::_Sp_counted_ptr_inplace(_Alloc, _Args&& ...) [with _Args = {int}; _Tp = xacc::quantum::ATOSVisitor; _Alloc = std::allocator<xacc::quantum::ATOSVisitor>; __gnu_cxx::_Lock_policy _Lp = (__gnu_cxx::_Lock_policy)2u]’
/usr/include/c++/4.8.2/ext/new_allocator.h:120:4:   required from ‘void __gnu_cxx::new_allocator<_Tp>::construct(_Up*, _Args&& ...) [with _Up = std::_Sp_counted_ptr_inplace<xacc::quantum::ATOSVisitor, std::allocator<xacc::quantum::ATOSVisitor>, (__gnu_cxx::_Lock_policy)2u>; _Args = {const std::allocator<xacc::quantum::ATOSVisitor>, int}; _Tp = std::_Sp_counted_ptr_inplace<xacc::quantum::ATOSVisitor, std::allocator<xacc::quantum::ATOSVisitor>, (__gnu_cxx::_Lock_policy)2u>]’
/usr/include/c++/4.8.2/bits/alloc_traits.h:254:4:   [ skipping 2 instantiation contexts, use -ftemplate-backtrace-limit=0 to disable ]
/usr/include/c++/4.8.2/bits/shared_ptr_base.h:503:37:   required from ‘std::__shared_count<_Lp>::__shared_count(std::_Sp_make_shared_tag, _Tp*, const _Alloc&, _Args&& ...) [with _Tp = xacc::quantum::ATOSVisitor; _Alloc = std::allocator<xacc::quantum::ATOSVisitor>; _Args = {int}; __gnu_cxx::_Lock_policy _Lp = (__gnu_cxx::_Lock_policy)2u]’
/usr/include/c++/4.8.2/bits/shared_ptr_base.h:957:35:   required from ‘std::__shared_ptr<_Tp, _Lp>::__shared_ptr(std::_Sp_make_shared_tag, const _Alloc&, _Args&& ...) [with _Alloc = std::allocator<xacc::quantum::ATOSVisitor>; _Args = {int}; _Tp = xacc::quantum::ATOSVisitor; __gnu_cxx::_Lock_policy _Lp = (__gnu_cxx::_Lock_policy)2u]’
/usr/include/c++/4.8.2/bits/shared_ptr.h:316:64:   required from ‘std::shared_ptr<_Tp>::shared_ptr(std::_Sp_make_shared_tag, const _Alloc&, _Args&& ...) [with _Alloc = std::allocator<xacc::quantum::ATOSVisitor>; _Args = {int}; _Tp = xacc::quantum::ATOSVisitor]’
/usr/include/c++/4.8.2/bits/shared_ptr.h:598:39:   required from ‘std::shared_ptr<_Tp1> std::allocate_shared(const _Alloc&, _Args&& ...) [with _Tp = xacc::quantum::ATOSVisitor; _Alloc = std::allocator<xacc::quantum::ATOSVisitor>; _Args = {int}]’
/usr/include/c++/4.8.2/bits/shared_ptr.h:614:42:   required from ‘std::shared_ptr<_Tp1> std::make_shared(_Args&& ...) [with _Tp = xacc::quantum::ATOSVisitor; _Args = {int}]’
/home/r09/xacc-atos/tests/ATOSVisitorTester.cpp:74:48:   required from here
/usr/include/c++/4.8.2/ext/new_allocator.h:120:4: error: no matching function for call to ‘xacc::quantum::ATOSVisitor::ATOSVisitor(int)’
  { ::new((void *)__p) _Up(std::forward<_Args>(__args)...); }
    ^
/usr/include/c++/4.8.2/ext/new_allocator.h:120:4: note: candidates are:
In file included from /home/r09/xacc-atos/tests/ATOSVisitorTester.cpp:32:0:
/home/r09/xacc-atos/utils/ATOSVisitor.hpp:102:2: note: xacc::quantum::ATOSVisitor::ATOSVisitor()
  ATOSVisitor() {
  ^
/home/r09/xacc-atos/utils/ATOSVisitor.hpp:102:2: note:   candidate expects 0 arguments, 1 provided
/home/r09/xacc-atos/utils/ATOSVisitor.hpp:69:7: note: xacc::quantum::ATOSVisitor::ATOSVisitor(const xacc::quantum::ATOSVisitor&)
 class ATOSVisitor: public AllGateVisitor {
       ^
/home/r09/xacc-atos/utils/ATOSVisitor.hpp:69:7: note:   no known conversion for argument 1 from ‘int’ to ‘const xacc::quantum::ATOSVisitor&’
make[2]: *** [tests/CMakeFiles/ATOSVisitorTester.dir/ATOSVisitorTester.cpp.o] Error 1
make[1]: *** [tests/CMakeFiles/ATOSVisitorTester.dir/all] Error 2
make: *** [all] Error 2
